--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -89,7 +89,7 @@ body {
   border: 1px solid rgb(255, 255, 255);
 }
 
-.square:hover {
+#cpu_board > .square:hover {
   cursor: pointer;
   opacity: 100%;
   background-color: rgba(127, 255, 0, 0.9);
@@ -123,6 +123,8 @@ body {
   justify-content: center;
   gap: 30px;
   font-family: "Roboto", sans-serif;
+  opacity: 1;
+  transition: opacity 0.3s ease;
 }
 
 #intro p {
@@ -161,6 +163,10 @@ body {
   background-color: #0056b3;
 }
 
+#intro button:active {
+  transform: translateY(1px);
+  transition: transform 0.2s ease;
+}
 #intro button:focus {
   outline: none;
   box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
@@ -169,12 +175,40 @@ body {
 /* //////////HIDDEN////////////////////////// */
 /* ///////////////////////////////////////// */
 
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    display: none;
+  }
+}
 #intro.hidden {
   display: none;
 }
 
+#intro.animation {
+  animation-name: fadeOut;
+  animation-duration: 0.5s;
+  animation-timing-function: ease-in;
+  opacity: 0;
+}
+
 #main.hidden {
   display: none;
+}
+
+.hit {
+  background-color: rgb(28, 173, 72);
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>skull-scan</title><path d="M2 0C.9 0 0 .9 0 2V6H2V2H6V0H2M18 0V2H22V6H24V2C24 .9 23.1 0 22 0H18M12 3C7.6 3 4 6.6 4 11C4 13.5 5.2 15.8 7 17.2V21H9V18H11V21H13V18H15V21H17V17.2C18.8 15.7 20 13.5 20 11C20 6.6 16.4 3 12 3M8 14C6.9 14 6 13.1 6 12S6.9 10 8 10 10 10.9 10 12 9.1 14 8 14M10.5 16L12 13L13.5 16H10.5M16 14C14.9 14 14 13.1 14 12S14.9 10 16 10 18 10.9 18 12 17.1 14 16 14M0 18V22C0 23.1 .9 24 2 24H6V22H2V18H0M22 18V22H18V24H22C23.1 24 24 23.1 24 22V18H22Z" /></svg>');
+  pointer-events: none;
+}
+
+.miss {
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>alpha-x-box</title><path d="M9,7L11,12L9,17H11L12,14.5L13,17H15L13,12L15,7H13L12,9.5L11,7H9M5,3H19A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V5A2,2 0 0,1 5,3Z" /></svg>');
+  background-color: red;
+  pointer-events: none;
 }
 /* //////////FOOTER////////////////////////// */
 /* ///////////////////////////////////////// */
