--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -58,12 +58,20 @@ body {
 
 #status {
   font-size: 2em;
-  font-weight: bold;
-  padding: 2%;
+  /* font-weight: bold; */
+  padding: 1%;
   background-color: rgb(124, 233, 151);
   color: white;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
   border-radius: 20px;
+  width: 30%;
+  display: flex;
+  justify-content: center;
+}
+
+#randomize_btn svg {
+  width: 30px;
+  height: 30px;
 }
 #boards {
   display: flex;
@@ -74,10 +82,10 @@ body {
 
 .board {
   display: grid;
-  grid-template-columns: repeat(10, 1fr); /* 10 columns */
-  grid-template-rows: repeat(10, 1fr); /* 10 rows */
-  width: 500px; /* Adjust width as needed */
-  height: 500px; /* Adjust height as needed */
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: repeat(10, 1fr);
+  width: 500px;
+  height: 500px;
 }
 
 .board div {
@@ -226,4 +234,56 @@ body {
 #footer svg {
   width: 30px;
   height: 30px;
+}
+
+/* //////////MODAL////////////////////////// */
+/* ///////////////////////////////////////// */
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 40%;
+  text-align: center;
+}
+
+#modal-content-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+}
+
+#modal-content-info p {
+  font-size: 1.3em;
+  font-weight: bold;
+  font-family: "Roboto", sans-serif;
+}
+
+#okButton {
+  padding: 10px 20px;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  width: 20%;
+  font-size: 16px;
+}
+
+#okButton:hover {
+  background-color: #45a049;
 }
