--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -66,13 +66,60 @@ body {
   border-radius: 20px;
   width: 30%;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
+  align-items: center;
+  gap: 20px;
+}
+
+#randomize_btn {
+  background-color: #4caf50;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 50%;
+  aspect-ratio: 1/1;
 }
 
 #randomize_btn svg {
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
+  fill: white;
 }
+
+#randomize_btn:hover {
+  background-color: #45a049;
+}
+
+#begin_game {
+  background-color: #4caf50;
+  aspect-ratio: 1/1;
+
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+#begin_game svg {
+  width: 40px;
+  height: 40px;
+  fill: white;
+}
+
+#begin_game:hover {
+  background-color: #45a049;
+}
+
 #boards {
   display: flex;
   justify-content: space-between;
