--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -135,6 +135,26 @@ body {
   height: 500px;
 }
 
+#user_board_container {
+  position: relative;
+  width: 500px;
+  height: 500px;
+}
+
+#user_board_overlay {
+  position: absolute;
+  top: 0;
+  background-color: rgba(0, 123, 255, 0.2);
+  width: 100%;
+  height: 100%;
+}
+#user_board {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .board div {
   background-size: cover;
   background-attachment: fixed;
@@ -333,4 +353,10 @@ body {
 
 #okButton:hover {
   background-color: #45a049;
+}
+
+.patrol_boat {
+  background-image: url("../images/length_two_boat.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
