--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -4,7 +4,7 @@
 
 html,
 body {
-  height: 100dvh;
+  height: 100svh;
   display: flex;
   flex-direction: column;
   font-family: "Roboto", sans-serif;
