made some QOL to the body and github logo

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2,11 +2,13 @@
   box-sizing: border-box;
 }
 
-html,
+html {
+  height: 100%;
+}
 body {
-  height: 100svh;
-  display: flex;
-  flex-direction: column;
+  min-height: 100dvh;
+  display: grid;
+  grid-template-rows: 15fr 80fr 5fr;
   font-family: "Roboto", sans-serif;
 }
 
@@ -37,7 +39,7 @@ body {
 /* ///////////////////////////////////////// */
 
 #header {
-  height: 10%;
+  /* height: 10%; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -74,7 +76,7 @@ body {
 /* ///////////////////////////////////////// */
 
 #content {
-  height: 85%;
+  /* height: 85%; */
   background-color: var(--background);
 }
 
@@ -374,7 +376,7 @@ body {
 /* ///////////////////////////////////////// */
 
 #footer {
-  height: 5%;
+  /* height: 5%; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -393,18 +395,19 @@ body {
 #footer svg {
   width: 30px;
   height: 30px;
-  fill: var(--text);
+  fill: white;
 }
-
 #moving_svg {
   position: absolute;
   right: 0;
   mix-blend-mode: screen;
+  width: 150px;
+  height: 100px;
 }
 
-#fancy_svg {
-  box-shadow: 0 2px 2px white;
-  border-radius: 100px;
+#mask {
+  min-width: 130px !important;
+  min-height: 130px !important;
 }
 /* //////////MODAL////////////////////////// */
 /* ///////////////////////////////////////// */
